# uri-bytestring

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.org  changelog.md  stack-ghc-8.2.1.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-4.yaml  stack-lts-5.yaml  stack-nightly.yaml  stack.yaml  uri-bytestring.cabal
bench/: Main.hs
doctest/: Main.hs
pkg/uri-bytestring-test/: README.md  uri-bytestring-test.cabal
pkg/uri-bytestring-types/: README.md  stack.yaml  uri-bytestring-types.cabal
pkg/uri-bytestring-types/src/URI/ByteString/: Types.hs
src/URI/: ByteString.hs  Common.hs  Parser.hs  Types.hs
src/URI/ByteString/: Internal.hs  Lens.hs  Normalization.hs  QQ.hs  Types.hs
test/: Main.hs
test/URI/: ByteStringQQTests.hs  ByteStringTests.hs
test/URI/ByteString/: Arbitrary.hs  Generators.hs  LensTests.hs
