name:                uri-bytestring
version:             0.1.5
synopsis:            Haskell URI parsing as ByteStrings
description: uri-bytestring aims to be an RFC3986 compliant URI parser that uses efficient ByteStrings for parsing and representing the URI data.
license:             BSD3
license-files:       LICENSE
                   , licenses/http-types/LICENSE
author:              Doug Beardsley, Michael Xavier
maintainer:          Michael Xavier <michael.xavier@soostone.com>
copyright:           Soostone Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.16
homepage:            https://github.com/Soostone/uri-bytestring
bug-reports:         https://github.com/Soostone/uri-bytestring/issues
extra-source-files:
  README.md
  CONTRIBUTING.md
  changelog.md
  bench/*.hs

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    URI.ByteString
  other-modules:
    URI.ByteString.Lens
    URI.ByteString.Types
    URI.ByteString.Internal

  build-depends:

      attoparsec       >= 0.10    && < 0.14
    , base             >= 4.6     && < 4.9
    , bytestring       >= 0.9.1   && < 0.11
    , blaze-builder    >= 0.3.0.0 && < 0.5

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    URI.ByteString.Arbitrary
    URI.ByteStringTests
  hs-source-dirs: test
  build-depends:
      uri-bytestring
    , HUnit
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , derive
    , attoparsec
    , base
    , blaze-builder
    , bytestring
    , lens
    , quickcheck-instances
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language:    Haskell2010
  build-depends:
      base
    , uri-bytestring
    , criterion
    , deepseq
    , deepseq-generics
    , network-uri >= 2.6.0.3
    , bytestring
    , blaze-builder

source-repository head
  type:     git
  location: git://github.com/Soostone/uri-bytestring.git
