name:                uri-bytestring-test
version:             0.3.2.0
synopsis:            Arbitrary instances for uri-bytestring
description:         use this package if your property test data uses types from the uri-bytestring package.
license:             BSD3
license-files:       LICENSE
                   , licenses/http-types/LICENSE
author:              Doug Beardsley, Michael Xavier
maintainer:          Michael Xavier <michael.xavier@soostone.com>
copyright:           Soostone Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.16
homepage:            https://github.com/Soostone/uri-bytestring
bug-reports:         https://github.com/Soostone/uri-bytestring/issues
Tested-With:         GHC == 7.8.4
                   , GHC == 7.10.1
                   , GHC == 8.0.2
                   , GHC == 8.2.1
                   , GHC == 8.4.1
extra-source-files:
  README.md

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    URI.ByteString.Arbitrary

  build-depends:
      uri-bytestring == 0.3.2.0
    , base >= 4.6 && < 5
    , QuickCheck
    , quickcheck-instances
    , generics-sop >= 0.2

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/Soostone/uri-bytestring.git
